--- a/tp1/index.html
+++ b/tp1/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <h1><center>Curriculum vitae</center></h1>
-    <img src="PHOTO.PNG" height=200 width="180"/>
+    <img src="PHOTO.png" height=200 width="180"/>
     <br/>
 
     <table id="slice" width="100%" border="1">
@@ -116,7 +116,7 @@
         <table id="slice" width="100%" border="1">
             <tr>
                 <td><b>2017</b></td>
-                <td>Stage : Azegza Power <img src="azegza.png" height=30 width="30"> </td>
+                <td>Stage : Azegza Power <img src="Azegza.png" height=30 width="30"> </td>
             </tr>
             <tr>
                 <td><b>2016</b></td>
@@ -128,7 +128,7 @@
             </tr>
             <tr>
                 <td><b>2014</b></td>
-                <td>Stage : Huawei <img src="Huawei.png" height=30 width="30"></td>
+                <td>Stage : Huawei <img src="huawei.png" height=30 width="30"></td>
             </tr>
 
         </table>
